kubernetes-config-files/bootstrap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    io.kompose.service: bootstrap
  name: bootstrap
spec:
  containers:
  - name: ethereum
    args: ["--datadir ~/.ethereum/devchain --nodekeyhex 091bd6067cb4612df85d9c1ff85cc47f259ced4d4cd99816b14f35650f59c322 --networkid 456719 --rpc --rpcaddr 0.0.0.0 --rpcapi db,personal,eth,net,web3 --rpccorsdomain=* --ws --wsaddr 0.0.0.0 --wsapi db,personal,eth,net,web3 --wsorigins=* --mine --minerthreads 1 --unlock 0,1 --password /dev/null"]
    command: ["/root/start.sh"]
    image: go-ethereum:monitored-client
    imagePullPolicy: Always
    ports:
    - containerPort: 30303
    - containerPort: 30303
      protocol: UDP
    - containerPort: 8545
    - containerPort: 8546
  - name: las2peer
    image: las2peer:autostart
    imagePullPolicy: Always
    ports:
    - containerPort: 9000
  hostname: bootstrap
  restartPolicy: OnFailure
