kubernetes-config-files/netstats-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: netstats
  name: netstats
spec:
  containers:
  - env:
    - name: WS_SECRET
      value: eth-net-stats-secret
    image: go-ethereum:netstats
    name: netstats
    ports:
    - containerPort: 3000
  restartPolicy: OnFailure
