kubernetes-config-files/netstats-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: netstats
  name: netstats
spec:
  ports:
  - name: "netstats-ui"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: netstats
